--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2021"
 [dependencies]
 env_logger = "0.10.0"
 log = "0.4.17"
-rust_socketio = "0.4.1"
+rust_socketio = { version = "0.4.1-alpha.1", features = ["async"] }
 serde_json = "1.0.94"
+tokio = { version = "1.27.0", features = ["macros"] }
